fix logger scrollbar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -27,6 +27,21 @@
   border-radius: 20px;
 }
 
+.logger-scrollbar::-webkit-scrollbar {
+  width: 10px;
+}
+
+.logger-scrollbar::-webkit-scrollbar-track {
+  background: #a18aff;
+  width: 5px;
+}
+
+.logger-scrollbar::-webkit-scrollbar-thumb {
+  background: #ca8bfe;
+
+  border-radius: 6px;
+}
+
 /* background-color: #ca8bfe;
 width: 10px;
 border-radius: 14px; */
